# PeakRDL-Python-simple

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
docs/: conf.py  index.rst
example/: accelera-generic_example.py  accelera_generic_example.py
src/peakrdl_python/: exporter.py
src/peakrdl_python/regif/: __main__.py  access.py  regif.py  spec.py
src/peakrdl_python_simple/: __peakrdl__.py  exporter.py
src/peakrdl_python_simple/regif/: access.py  regif.py  spec.py
src/peakrdl_python_simple/regif/impl/: devmem.py  dummy.py  mmap.py  multiregion.py
test/: __init__.py  exporter_test.py
test/regif/: regif_test.py
